--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^9.39.1",
     "gulp": "^5.0.1",
     "n8n-workflow": "*",
+    "prettier": "^3.7.3",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.0"
   },
