--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   ],
   "license": "MIT",
   "homepage": "https://github.com/reftab/n8n-nodes-reftab",
+  "author": {
+    "name": "Michael Plocher",
+    "email": "michael.plocher@reftab.com"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/reftab/n8n-nodes-reftab.git"
